# c_allocator

./: CMakeLists.txt  Readme.md
inc/: block.h  block_defs.h
src/: CMakeLists.txt  block.c
test/: CMakeLists.txt  test_block.c
